2007-08-16  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-banner.c (hildon_banner_init): mark the banners as
	temporary, depends on maemo-gtk >= 2.10.12-osso7. Also ignore the
	delete event that will come from _GTK_DELETE_TEMPORARIES, as we
	don't want to be closed by non-temporary windows on map.

	Also use G_DEFINE_TYPE instead of manually typed code.

2007-08-06  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.12-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog:
	* debian/rules: Updating.

2007-08-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-hvolumebar-timer-example.c: Adding an exmaple to debug
	bug NB#61128. Strangely it works.

2007-08-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-date-editor.c: When the date editor entry has been changed
	but the numbers of characters < max, turn off the skip validation flag.
	Prevents a situation when we enter first a valid year and later re-write
	it with an invalid one. Fixes NB#60154.

2007-07-26  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-code-dialog.c: Fixing the dialog button alignment inside the
	code dialog. Fixes NB#64355.

2007-07-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-wizard-dialog.c: Don't call the _set_sensitivity again after
	switching the page. Fixes NB#49374.

	* examples/Makefile.am:
	* examples/hildon-wizard-dialog-example.c: Adding an example for
	HildonWizardDialog that shows how to handle manual sensitivity setting on
	the wizard dialog.

2007-07-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* configure.ac:
	* src/Makefile.am:
	* src/hildon-version.h.in:
	* src/hildon.h: Adding the HILDON_CHECK_VERSION macro. Fixes: NB#62061.

2007-07-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-volumebar.c: Updating the docs.
