@@ -1,3 +1,9 @@
+2007-08-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* examples/Makefile.am:
+	* examples/hildon-toolbar-seekbar-example.c: Adding an example to test a
+	HildonSeekbar widget inside a toolbar.
+
 2007-08-16  Xan Lopez  <xan.lopez@nokia.com>
 
 	* src/hildon-banner.c (hildon_banner_init): mark the banners as
